[gd_scene load_steps=4 format=3 uid="uid://bq3pmj7prm3go"]

[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/Stats/growth_column.gd" id="1_em2gc"]
[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/Stats/StatGrowthPanel.gd" id="2_m6dm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu6ki"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="StatColumn" type="Panel"]
custom_minimum_size = Vector2(105, 0)
offset_right = 105.0
offset_bottom = 634.0
script = ExtResource("1_em2gc")

[node name="StatName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "NameOfStat"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatRowContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatGrowthPanel" type="Panel" parent="."]
visible = false
top_level = true
offset_left = 106.0
offset_top = 69.0
offset_right = 358.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yu6ki")
script = ExtResource("2_m6dm1")

[node name="Label" type="Label" parent="StatGrowthPanel"]
offset_right = 40.0
offset_bottom = 23.0
text = "Value at First Level:
Value at Last Level:"

[node name="Lvl1Edit" type="LineEdit" parent="StatGrowthPanel"]
offset_left = 154.0
offset_right = 221.063
offset_bottom = 31.0
text = "0"
placeholder_text = "0"

[node name="Lvl99Edit" type="LineEdit" parent="StatGrowthPanel"]
offset_left = 154.0
offset_top = 28.0
offset_right = 221.063
offset_bottom = 59.0
text = "0"
placeholder_text = "0"

[node name="GenerateSatGrowth" type="Button" parent="StatGrowthPanel"]
offset_left = 34.0
offset_top = 57.0
offset_right = 211.0
offset_bottom = 88.0
text = "Generate Stat Growth"

[node name="Button" type="Button" parent="StatGrowthPanel"]
layout_mode = 0
offset_left = 235.0
offset_top = -2.0
offset_right = 253.0
offset_bottom = 29.0
text = "X"

[node name="CurveMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 27.0
offset_right = 93.0
offset_bottom = 81.0
text = "Generate
Curve"

[connection signal="set_stat_list" from="StatGrowthPanel" to="." method="_set_stat_list"]
[connection signal="text_changed" from="StatGrowthPanel/Lvl1Edit" to="StatGrowthPanel" method="_on_lvl_1_edit_text_changed"]
[connection signal="text_changed" from="StatGrowthPanel/Lvl99Edit" to="StatGrowthPanel" method="_on_lvl_99_edit_text_changed"]
[connection signal="button_down" from="StatGrowthPanel/GenerateSatGrowth" to="StatGrowthPanel" method="_on_generate_sat_growth_button_down"]
[connection signal="button_down" from="StatGrowthPanel/Button" to="StatGrowthPanel" method="_on_close_button_down"]
[connection signal="button_down" from="CurveMenu" to="StatGrowthPanel" method="_on_curve_menu_button_down"]
